# Trading-Bot

./: .env  .gitignore  CMakeLists.txt  README.md  UNUSED_FILES.md  build.sh  run.sh
include/config/: BotConfiguration.h
include/core/: OrderBook.h  OrderBookManager.h  SymbolManager.h
include/messaging/: AeronPublisher.h  GlobalMediaDriver.h  SBEEncoder.h
include/network/: BybitRestClient.h  BybitWebSocketClient.h
include/trading/: TradingEngine.h
include/utils/: DataLogger.h  PerformanceMonitor.h
schema/: market_data.xml
src/: main.cpp
src/config/: BotConfiguration.cpp
src/core/: OrderBook.cpp  OrderBookManager.cpp  SymbolManager.cpp
src/messaging/: AeronPublisher.cpp  GlobalMediaDriver.cpp  SBEEncoder.cpp
src/network/: BybitRestClient.cpp  BybitWebSocketClient.cpp
src/trading/: TradingEngine.cpp
src/utils/: AeronSpy.cpp  DataLogger.cpp  PerformanceMonitor.cpp
